<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.confirm.sample.ConsentFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:id="@+id/fragment_consent_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fed_green">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/disclaimer_msg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="78dp"
            android:layout_above="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="172dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/disagree"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:text="@string/agree"
            android:textAllCaps="false" />


    </RelativeLayout>

</FrameLayout>
