<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:id="@+id/result_fragment"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  tools:context="io.confirm.sample.ResultFragment"
			  android:background="@color/fed_green"
	          android:gravity="center">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:measureWithLargestChild="true"
		android:layout_gravity="center">

        <TextView
            android:id="@+id/bio"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical|center"
            android:text="BIO"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold"
			android:textAllCaps="true"/>


    </LinearLayout>



	<!-- Personal Information -->


	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="1"
		android:layout_gravity="center">

		<TextView
			android:id="@+id/first_name"
			android:layout_width="128dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:layout_weight="0.87"
			android:gravity="right|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/last_name"
			android:layout_width="175dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="center|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="1"
		android:layout_gravity="center">

		<TextView
			android:id="@+id/address"
			android:layout_width="match_parent"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="center|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />


	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center">

		<TextView
			android:layout_width="160dp"
			android:layout_height="28dp"
			android:id="@+id/city"
			android:layout_gravity="center"
			android:gravity="right|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white"/>

		<TextView
			android:id="@+id/state"
			android:layout_width="51dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="center|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/zip"
			android:layout_width="100dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="left|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />
	</LinearLayout>





	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:weightSum="1">

		<TextView
			android:id="@+id/dob_label"
			android:layout_width="128dp"
			android:layout_height="28dp"
			android:layout_weight="0.56"
			android:gravity="bottom|right"
			android:paddingRight="5dp"
			android:text="@string/dob"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />

		<TextView
			android:layout_width="148dp"
			android:layout_height="28dp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/dob"
			android:layout_gravity="center_horizontal"
			android:gravity="left|bottom"
			android:textColor="@color/white" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"></LinearLayout>

    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
		android:text="ID"
		android:id="@+id/textView2"
		android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="1"
		android:layout_gravity="center">

		<TextView
			android:id="@+id/iss_state"
			android:layout_width="83dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:layout_weight="0.58"
			android:gravity="right|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/space_type"
			android:layout_width="10dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:layout_weight="0.09"
			android:gravity="center|bottom"
			android:text=":"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/number"
			android:layout_width="147dp"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="left|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white"
			android:layout_weight="0.37" />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:weightSum="1"
		android:layout_gravity="center">


		<TextView
			android:id="@+id/iss_type"
			android:layout_width="match_parent"
			android:layout_height="28dp"
			android:layout_gravity="center"
			android:gravity="center|bottom"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/white" />
	</LinearLayout>




	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:weightSum="1">

		<TextView
			android:id="@+id/expiration_label"
			android:layout_width="128dp"
			android:layout_height="28dp"
			android:layout_weight="1.03"
			android:gravity="bottom|right"
			android:paddingRight="5dp"
			android:text="@string/expiration"
			android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

		<TextView
			android:layout_width="200dp"
			android:layout_height="28dp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:id="@+id/expiration"
			android:layout_gravity="center"
			android:gravity="left|bottom"
			android:textColor="@color/white" />
	</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/results"
		android:id="@+id/server_header"
        android:layout_gravity="center"/>

	<LinearLayout
		android:id="@+id/result_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/status_label"
			android:layout_width="fill_parent"
			android:layout_height="42dp"
			android:gravity="center_vertical|center"
			android:text="Pass/Fail"
			android:textAllCaps="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/white" />
	</LinearLayout>

	<LinearLayout
        android:id="@+id/failure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


<TextView
android:id="@+id/failure"
android:layout_width="match_parent"
android:layout_height="28dp"
android:layout_gravity="center"
android:gravity="center|bottom"
android:textAppearance="?android:attr/textAppearanceMedium"
android:textColor="@color/white"
	android:textAllCaps="true"/>
</LinearLayout>
    <!-- Facial Recognition -->
	<LinearLayout
		android:id="@+id/facial_recognition_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="FR Description"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/white" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/fr_label"
				android:layout_width="178dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:gravity="right|bottom"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white"
				android:text="@string/fr_label"/>
			<TextView
				android:id="@+id/frspace_type"
				android:layout_width="10dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:layout_weight="0.06"
				android:gravity="center|bottom"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@color/white"
				android:text=":"/>
			<TextView
				android:id="@+id/face_match_score_label"
				android:layout_width="123dp"
				android:layout_height="28dp"
				android:layout_gravity="center"
				android:gravity="left|bottom"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white" />
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">

		<Button
			android:id="@+id/close_button"
			android:layout_width="42dp"
			android:layout_height="42dp"
			android:layout_gravity="center|bottom"
			android:layout_weight="0.38"
			android:text="@string/start_over"
			android:textAllCaps="false" />
	</LinearLayout>

</LinearLayout>